--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-Name: Sumaiya Juma
+Name: Sumeiya Juma
 ID: s2110905
  -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
